Reworked! Now only supports JNI method + uses gradle's C compilation module